--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,11 @@
     <string name="app_name">MadridShops</string>
     <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="error_getting_all_shops">Error getting all shops</string>
+    <string name="shop_name">Shop\'s name</string>
+    <string name="shop_description">Shop\'s description</string>
+    <string name="shop_openning_hours">Shop\'s openning hours</string>
+    <string name="shop_image_description">Shop\'s image description</string>
+
 </resources>
