Buttons on main view to navigate. Titles in all toolbars and Home Button to Go Back

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="show_hide_map">Show / hide map</string>
     <string name="shops">Shops</string>
     <string name="activities">Activities</string>
+    <string name="logo_s_app">Logo\'s App</string>
 </resources>
